force-app/main/default/objects/ssot__DigitalSignature__dlm/fields/ssot__DigitalSignatureType__c.field-meta.xml
<CustomField>
    <fullName>ssot__DigitalSignatureType__c</fullName>
    <label>Digital Signature Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DigitalSignatureType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>