force-app/main/default/objects/ssot__DigitalSignature__dlm/fields/ssot__rel_1720291274294_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291274294_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DigitalSignature_SignatureContextId__rel</label>
    <referenceTo>ssot__Assessment__dlm</referenceTo>
    <relationshipLabel>DigitalSignature_SignatureContextId__rel</relationshipLabel>
    <relationshipName>rel_1720291274294_end</relationshipName>
    <type>Lookup</type>
</CustomField>