force-app/main/default/objects/ssot__DigitalSignature__dlm/fields/ssot__SignatureContextId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SignatureContextId__c</fullName>
    <label>Signature Context</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SignatureContextId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>