force-app/main/default/objects/ssot__DigitalSignature__dlm/fields/ssot__SignedByName__c.field-meta.xml
<CustomField>
    <fullName>ssot__SignedByName__c</fullName>
    <label>Signed By Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SignedByName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>